site/styles/_meta-detail.scss
@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.meta-detail {
  padding-bottom: 0;

  > .container {
    padding-left: 0;
    padding-right: 0;
    position: relative;
    z-index: 2;
  }
}

.meta-detail-bg {
  @extend .d-flex;
  flex-direction: row;
  height: 500px;
  justify-content: flex-end;
  margin: 0 auto;
  max-height: 900px;
  max-width: 100%;
  opacity: 0.8;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
  @include media-breakpoint-up(xs) {
    height: 700px;
    opacity: 1;
  }
  @include media-breakpoint-up(lg) {
    height: auto;
  }

  s72-image {
    display: block;
    position: relative;
    width: 100%;

    &::before {
      @extend .left-gradient-bg;
      bottom: 0;
      content: '';
      height: 100%;
      left: -1px;
      position: absolute;
      top: 0;
      width: 60%;
      z-index: 8;
      @include media-breakpoint-up(lg) {
        display: none;
      }
    }

    img {
      animation: fadein 2s;
      min-height: 100%;
      object-fit: cover;
    }
  }

  &::after {
    @extend .bottom-gradient-bg;
    content: '';
    height: 350px;
    position: absolute;
    width: 100%;
    z-index: 8;
    @include media-breakpoint-up(lg) {
      @include detail-page-gradient-lg;
      height: 100%;
    }
  }
}

.meta-detail {
  .container {
    max-width: 100%;
  }
}

.meta-detail-bg-gradient {
  @include gradient-y(rgba(var(--body-bg-rgb), 0.4), var(--body-bg), 0%, 100%);
  bottom: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.meta-detail-bg-img {
  display: block;
  width: 100%;
}

.meta-detail-main {
  display: grid;
  padding: var(--page-detail-padding-top) 20px 0 20px;

  @include media-breakpoint-up(xs) {
    padding-top: var(--page-detail-padding-top-md);
  }

  @include media-breakpoint-up(lg) {
    grid-template-columns: auto 1fr;
    padding: var(--page-detail-padding-top-lg) 50px 0 50px;
    padding-bottom: 0;
  }

  s72-live-label {
    @include media-breakpoint-up(lg) {
      grid-column: 2;
    }

    .live-label {
      margin-bottom: 12px;
      position: absolute;
      // 42px magic number is 30px height of the label + 12px of "margin".
      top: calc(var(--page-detail-padding-top) - 42px);

      @include media-breakpoint-up(xs) {
        // 42px magic number is 30px height of the label + 12px of "margin".
        top: calc(var(--page-detail-padding-top-md) - 42px);
      }

      @include media-breakpoint-up(lg) {
        margin-bottom: 8px;
        // 42px magic number is 30px height of the label + 12px of "margin".
        top: calc(var(--page-detail-padding-top-lg) - 42px);
      }
    }
  }

  .poster-wrapper {
    @include media-breakpoint-up(lg) {
      grid-row: 2;
    }

    .sponsor {
      margin-bottom: 12px;

      @include media-breakpoint-up(lg) {
        margin-bottom: 20px;
      }
    }

    > .poster {
      margin-bottom: 5px;
    }
  }

  .poster {
    animation: fadein 2s;
    display: block;
    flex-shrink: 0;
    margin-right: 20px;
    width: 110px;

    @include media-breakpoint-up(xs) {
      width: 155px;
    }

    @include media-breakpoint-up(xl) {
      width: 208px;
    }

    .live {
      display: none;
    }

    .s72-image {
      display: initial;
    }
  }

  .poster-wrapper .sponsor {
    @include media-breakpoint-up(lg) {
      display: none;
    }
  }

  .meta-detail-content {
    @include media-breakpoint-up(lg) {
      grid-column: 2;
      grid-row: 2;
    }
  }
}

s72-element-switcher,
.meta-detail-bonus-content,
.meta-detail-episodes-content,
.meta-awards-all {
  flex: 1 1 100%;
  max-width: 728px;

  @include media-breakpoint-up(xxxl) {
    max-width: 1100px;
  }
}

.meta-detail-content {
  width: 100%;

  h1 {
    animation: fadein 2s;
    margin-bottom: 0;
    max-width: 728px;
    text-shadow: none;

    @include media-breakpoint-up(xxxl) {
      max-width: 1100px;
    }
  }

  .meta-item-tagline {
    .meta-item-tagline-item,
    .meta-item-tagline-divider {
      animation: fadein 2s;
    }
  }

  .meta-detail-synopsis {
    margin-bottom: -4px;
    max-width: 728px;

    @include media-breakpoint-up(xl) {
      max-width: 1100px;
    }
  }

  .meta-detail-synopsis,
  .meta-detail-switcher-tagline {
    padding-top: 12px;

    @include media-breakpoint-up(xs) {
      padding-bottom: 4px;
    }

    p {
      animation: fadein 2s;
    }

    a {
      @include a;
    }
  }

  .meta-detail-cast,
  .meta-detail-crew,
  .meta-detail-language,
  .meta-detail-studio,
  .meta-detail-country,
  .meta-detail-subtitle {
    h2,
    h3,
    h4 {
      animation: fadein 2s;
      color: var(--body-color);
    }

    p {
      animation: fadein 2s;
      color: var(--body-color);
    }

    a {
      animation: fadein 2s;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

.meta-detail-bundle {
  .meta-detail-bg {
    opacity: 0.4;

    &::before {
      display: none;
    }

    &::after {
      @include gradient-y(rgba(var(--body-bg-rgb), 0), var(--body-bg), 0%, 100%);

      bottom: 0;
      left: 0;
      position: absolute;
      width: 100%;
    }

    s72-image {
      &::before {
        @include gradient-x(rgba(var(--body-bg-rgb), 1), transparent, 0%, 100%);

        bottom: 0;
        content: '';
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 30%;
        z-index: 8;
      }

      &::after {
        @include gradient-x(transparent, rgba(var(--body-bg-rgb), 1), 0%, 100%);

        bottom: 0;
        content: '';
        height: 100%;
        position: absolute;
        right: 0;
        top: 0;
        width: 30%;
        z-index: 8;
      }
    }
  }

  .meta-detail-main {
    flex-direction: column;
  }

  .meta-detail-content {
    max-width: 630px;
    width: 100%;

    @include media-breakpoint-up(md) {
      margin: 0;
    }

    @include media-breakpoint-up(lg) {
      max-width: 960px;
    }

    h1 {
      margin-bottom: 10px;
    }

    .meta-detail-tagline {
      margin-bottom: 25px;
    }

    .meta-item-tagline {
      margin: 0;
    }

    .meta-detail-synopsis {
      font-size: 12px;
      margin-bottom: 35px;

      @include media-breakpoint-up(lg) {
        font-size: 14px;
      }

      @include media-breakpoint-up(xl) {
        font-size: 16px;
      }
    }

    p {
      animation: fadein 2s;
    }
  }

  .page-collection-list {
    @include media-breakpoint-up(md) {
      padding: 0;
    }

    .page-collection-list-title {
      margin-bottom: 10px;
      padding: 0;
    }
  }

  .page-collection-item {
    margin-bottom: 15px;

    .poster {
      width: 100%;
    }

    .meta-item-tagline {
      margin: 0;
    }
  }
}

.meta-detail-episodes-content,
.meta-detail-bonus-content {
  margin-bottom: 18px;
  @include media-breakpoint-up(lg) {
    margin-bottom: 32px;
  }

  h2 {
    @include heading-3-style;
  }

  h3 {
    @include subtitle-1-style;
  }

  .runtime {
    @include subtitle-2-style;
  }
}

.element-switcher-wrapper {
  display: grid;
  width: 100%;

  @include media-breakpoint-up(lg) {
    grid-template-columns: auto auto;
    gap: 50px;
  }

  .sponsor {
    display: none;
    padding-top: 10px;

    @include media-breakpoint-up(lg) {
      display: block;
      margin-left: auto;
    }
  }
}

.sponsor {
  @include body-1-style();
  margin-bottom: 24px;
  max-width: 250px;

  div {
    margin-bottom: 4px;
  }
}

.meta-detail-content .sponsor {
  flex: 0 0 auto;
  text-align: right;
}

s72-element-switcher {
  margin-bottom: 62px;

  .s72-toggle {
    &:hover {
      color: var(--body-color-hover);
    }
  }
}

.meta-detail-info {
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(1, 1fr);
  padding-bottom: 14px;

  @include media-breakpoint-up(lg) {
    grid-template-columns: repeat(2, 1fr);
  }

  p {
    margin-bottom: 0;
  }

  h2 {
    @include caption-1-style;
  }
}

